kubernetes/deployment-go.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-go
  labels:
    app: go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go
  template:
    metadata:
      labels:
        app: go
    spec:
      containers:
      - name: go
        image: 019496914213.dkr.ecr.us-east-2.amazonaws.com/test-go:latest
        ports:
        - containerPort: 5000
---
  apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: go
    name: svc-go
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: go
    type: ClusterIP

---
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: ingress-go            
  spec:
    rules:
    - http:
        paths:
        - path: /api/v1
          pathType: Prefix
          backend:
            serviceName: svc-go
            servicePort: 80
