kubernetes/deployment-php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
  labels:
    app: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: 175986030077.dkr.ecr.eu-west-1.amazonaws.com/pagantis-app1:e1e8658c4dc3b27bf52b341e85b530ce6868609e
        ports:
        - containerPort: 5000
---
  apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: app1
    name: svc-app1
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
    selector:
      app: app1
    type: ClusterIP

---
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: traefik
    name: ingress-app1
  spec:
    rules:
    - host: pagantis.app1.com
      http:
        paths:
        - path: /
          backend:
            serviceName: svc-app1
            servicePort: 80
