kubernetes/ingress.yaml
---
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      ingress.kubernetes.io/rewrite-target: /
    name: ingress-apps           
  spec:
    rules:
    - http:
        paths:
        - path: /api/v1
          backend:
            serviceName: svc-php
            servicePort: 80
        - path: /api/v2
          backend:
            serviceName: svc-go
            servicePort: 80
